@@ -1,6 +1,5 @@
 package com.mystic.arczen;
 
-import com.mystic.arczen.commands.WeatherCommand;
 import com.mystic.arczen.listeners.SlashCommandListener;
 import discord4j.core.DiscordClientBuilder;
 import discord4j.core.GatewayDiscordClient;
@@ -10,15 +9,13 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.net.URISyntaxException;
-import java.util.Arrays;
-import java.util.Collections;
+import java.security.GeneralSecurityException;
 import java.util.List;
 
 public class ARCZen {
     private static final Logger LOGGER = LoggerFactory.getLogger(ARCZen.class);
 
-    public static void main(String[] args) {
+    public static void main(String[] args) throws GeneralSecurityException, IOException {
         //Creates the gateway client and connects to the gateway
         final GatewayDiscordClient client = DiscordClientBuilder.create("MTA0NjExNzIxNTUyMDQzMjIyOQ.GIzERK.PMm1sdP53GCrBwM6rhYS2puwQ-Wyu7XqUofGg4").build()
             .gateway()
@@ -32,8 +29,8 @@ public class ARCZen {
          is overly complicated for such a simple demo and requires handling for both IDE and .jar packaging.
          Using SpringBoot we can avoid all of this and use their resource pattern matcher to do this for us.
          */
-        List<String> commands = Collections.unmodifiableList(Arrays.asList("greet.json", "ping.json", "hello.json",
-                "diceroll.json", "cointoss.json", "help.json", "weather.json"));
+        List<String> commands = List.of("greet.json", "ping.json", "hello.json",
+                "diceroll.json", "cointoss.json", "help.json", "weather.json");
         try {
             new GlobalCommandRegistrar(client.getRestClient()).registerCommands(commands);
         } catch (Exception e) {
